# RustyStarUI

./: .gitignore  CHANGELOG.md  LICENSE  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: create-release.yml  quality.yml  release.yml
docs/: .gitignore  README.md  app.py  component_registry.py  pyproject.toml  utils.py
docs/layouts/: __init__.py  base.py  footer.py  header.py  sidebar.py
docs/pages/: __init__.py  components_index.py
docs/pages/components/: __init__.py  alert.py  avatar.py  badge.py  breadcrumb.py  button.py  calendar.py  card.py  input.py  label.py  tabs.py  theme_toggle.py
docs/static/css/: input.css  starlighter.css  styles.css
docs/widgets/: __init__.py  code_block.py  component_preview.py  inline_code.py  installation_section.py
src/starui/: __init__.py  config.py
src/starui/cli/: add.py  build.py  dev.py  init.py  list.py  main.py  utils.py
src/starui/css/: binary.py  builder.py
src/starui/dev/: __init__.py  middleware.py  process_manager.py  unified_reload.py  websocket_server.py
src/starui/registry/: __init__.py  client.py  component_metadata.py  loader.py
src/starui/templates/: app_starter.py  css_input.py
test_sandbox/: .gitignore  app.py  registry_loader.py  rustyFasty.py  sidebar.py  typography_demo.py
test_sandbox/html_test/: index.html  styles.css
test_sandbox/static/js/: tabs.js  (+5 more)
tests/: test_package_init.py
tests/cli/: __init__.py  test_dev.py  test_main.py  test_utils.py
tests/config/: __init__.py  test_detection.py  test_models.py
tests/registry/: test_dependency_resolution.py
tests/templates/: __init__.py  test_css_input.py
(+37 files in other folders)
