[project]
name = "starui-docs"
version = "0.1.0"
description = "Documentation for StarUI component library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starhtml>=0.1.13",
    "starlighter>=0.1.5",
    "starui>=0.1.7",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.uv.sources]
# For local development, use editable install of parent starui
# Comment out or remove this section for production deployment
starui = { path = "../", editable = true }



[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests", "demo"]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv", "**/build", "**/dist"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportMissingImports = false
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnusedImport = false
reportUnusedClass = true
reportUnusedFunction = false
reportUnusedVariable = false
reportDuplicateImport = true
reportWildcardImportFromLibrary = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = false
reportUnnecessaryContains = false
reportAssertAlwaysTrue = true
reportUnnecessaryTypeIgnoreComment = false
reportImplicitOverride = false
reportShadowedImports = true
reportUndefinedVariable = false
reportCallIssue = false
reportArgumentType = false
